# jvm-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  build.rs  gradle.properties  launcher.rc  settings.gradle.kts
.github/workflows/: ci.yaml  dependency-submission.yaml  publish.yaml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: com.osmerion.base-conventions.gradle.kts  com.osmerion.maven-publish-conventions.gradle.kts
docs/changelog/: 0.1.0.md  0.2.0.md  0.3.0.md  0.4.0.md  README.md  full.md  latest.md
gradle/: build.versions.toml
integrations/gradle/: README.md  build.gradle.kts
integrations/gradle/api/: gradle.api
integrations/gradle/src/functionalTest/: init.gradle.kts
integrations/gradle/src/functionalTest/kotlin/com/osmerion/jvm/launcher/gradle/plugins/: JvmLauncherPluginTest.kt
integrations/gradle/src/main/kotlin/com/osmerion/jvm/launcher/gradle/: JvmLauncher.kt  JvmLauncherExtension.kt  StringFileInfoBlock.kt  VersionNumber.kt
integrations/gradle/src/main/kotlin/com/osmerion/jvm/launcher/gradle/internal/: JvmLauncherExtensionImpl.kt  JvmLauncherImpl.kt
integrations/gradle/src/main/kotlin/com/osmerion/jvm/launcher/gradle/plugins/: JvmLauncherPlugin.kt
integrations/gradle/src/main/kotlin/com/osmerion/jvm/launcher/gradle/tasks/: BuildJvmLauncher.kt  GenerateLauncherConfig.kt
launcher/: Cargo.toml  build.rs
launcher/src/: error.rs  main.rs
samples/hello-gradle/: build.gradle.kts  settings.gradle.kts
src/: main.rs
(+1 files in other folders)
