[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.60.1"
embed-resource = "1.7.3"

[dependencies]
cesu8 = "1.1.0"
combine = "4.6.3"
jni = { version = "0.19.0", features = ["invocation"], git = "https://github.com/Osmerion/jni-rs" }
libloading = "0.7"
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.39.0"
features = ["Win32_Foundation", "Win32_System_Threading"]