[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "launcher"
path = "src/main.rs"

[build-dependencies]
embed-resource = "3.0.1"

[dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.6"
thistermination = "1.1.0"
toml = "0.8.19"
winapi = { version = "0.3.9", features = ["wincon"] }
